# mechanix-terminal

./: README.md  package-rpm.nu  packaging-metadata.yaml  pubspec.yaml
.github/workflows/: build-app-aarch64.yml
android/app/: build.gradle.kts
elinux/: CMakeLists.txt
elinux/runner/: CMakeLists.txt  main.cc
integration_test/: app_test.dart  simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: constants.dart  main.dart  objectbox-model.json  objectbox.g.dart  settings_page.dart
lib/core/utils/: app_theme.dart  constants.dart
lib/features/data/: settings.dart  settings_repository.dart
lib/features/screen/: settings_screen.dart  terminal_tabs_screen.dart
lib/features/widgets/: color_tile.dart  settings_tile.dart  terminal_painter.dart  terminal_view.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  (+1 more)
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: config.rs  frb_generated.rs  lib.rs  terminal.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_flutter_alacritty.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flutter_alacritty.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+9 files in other folders)
